Develop - Adicionando Serviços

--- a/eventos.API/eventos.API.csproj
+++ b/eventos.API/eventos.API.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\eventos.Models\eventos.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
